# Plan2Go

./: .gitlab-ci.yml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: build-and-release.yml  build_mobile.yml
public/: index.html  manifest.json  pwa.js  service-worker.js
public/demo/: index.html  script.js  style.css  test.html  test.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: lib.rs  main.rs
